--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link data-trunk rel="copy-dir" href="static" data-target-path="." />
 		<link data-trunk rel="css" href="style.css" />
 		<script src="pdfium.js"></script>
-		<link data-trunk rel="rust" data-bindgen-target="web" />
+		<link data-trunk rel="rust" />
 	</head>
 
 	<body>
