--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
 		<meta charset="utf-8" />
 		<link data-trunk rel="copy-dir" href="static" data-target-path="." />
 		<link data-trunk rel="css" href="style.css" />
-		<link data-trunk rel="rust" />
+		<link
+			data-trunk
+			rel="rust"
+			data-bin="app"
+			data-type="main"
+			data-weak-refs
+		/>
+		<!-- <link -->
+		<!-- 	data-trunk -->
+		<!-- 	rel="rust" -->
+		<!-- 	data-bin="worker" -->
+		<!-- 	data-type="worker" -->
+		<!-- 	data-weak-refs -->
+		<!-- /> -->
 	</head>
 
 	<body></body>
